build: adopt Android SDK 37